--- a/index.html
+++ b/index.html
@@ -22,37 +22,31 @@
         <h3>The Luchas</h3>
         <h4>Con</h4>
         <div class="row">
+            <div class="wrestler">
             <div class="col-md-3 lucha">
-                <img src="lucha_1.png">
                 <h5>El Zorro Reconocido</h5>
             </div>
             <div class="col-md-3 lucha">
-                <img src="lucha_2.png">
                 <h5>La Fruta Interesante</h5>
             </div>
             <div class="col-md-3 lucha">
-                <img src="lucha_3.png">
                 <h5>El Gallo Femenino</h5>
             </div>
             <div class="col-md-3 lucha">
-                <img src="lucha_4.png">
                 <h5>La Oreja Educado</h5>
             </div>
             <div class="col-md-3 lucha">
-                <img src="lucha_5.png">
                 <h5>El Rey Inalámbrico</h5>
             </div>
             <div class="col-md-3 lucha">
-                <img src="lucha_6.png">
                 <h5>El Vigilante Muerto</h5>
             </div>
             <div class="col-md-3 lucha">
-                <img src="lucha_7.png">
                 <h5>Pelo Peludo</h5>
             </div>
             <div class="col-md-3 lucha">
-                <img src="lucha_8.png">
                 <h5>El Huevo Popular</h5>
+            </div>
             </div>
         </div>
         <button class="btn start">Batalla Comienza</button>
